--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>
         testing pages
     </p>
-    <a href="./contact">Contact</a>
+    <a href="./contact.html">Contact</a>
 </body>
 </html>
